--- a/taskapp/Base.lproj/Main.storyboard
+++ b/taskapp/Base.lproj/Main.storyboard
@@ -16,34 +16,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Foq-Jw-asi">
-                                <rect key="frame" x="20" y="76" width="414" height="725"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="h7j-x8-eb8">
+                                <rect key="frame" x="0.0" y="39" width="414" height="818"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <tableView key="tableFooterView" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="h7j-x8-eb8">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    <prototypes>
-                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="888-0O-vfG">
-                                            <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="c4J-qm-A83">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="888-0O-vfG">
+                                        <rect key="frame" x="0.0" y="88.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="888-0O-vfG" id="wd3-TS-EkB">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="888-0O-vfG" id="wd3-TS-EkB">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                            </tableViewCellContentView>
-                                        </tableViewCell>
-                                    </prototypes>
-                                </tableView>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Foq-Jw-asi" secondAttribute="bottom" id="1YP-Dk-r8q"/>
-                            <constraint firstItem="Foq-Jw-asi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LGb-ui-3rw"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Foq-Jw-asi" secondAttribute="trailing" id="Raf-kJ-hdl"/>
-                            <constraint firstItem="Foq-Jw-asi" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="SJe-FS-LLZ"/>
-                        </constraints>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="GEG-Sm-Zh0">
@@ -55,7 +50,8 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="tableView" destination="h7j-x8-eb8" id="Umk-ds-CXo"/>
+                        <outlet property="searchBar" destination="c4J-qm-A83" id="HQG-Bx-kkG"/>
+                        <outlet property="tableView" destination="h7j-x8-eb8" id="eLr-11-aKl"/>
                         <segue destination="HvW-8p-lA2" kind="show" identifier="cellSegue" id="KAL-y8-IDO"/>
                     </connections>
                 </viewController>
@@ -105,6 +101,17 @@
                                     <constraint firstAttribute="height" constant="120" id="9Wy-dp-HRt"/>
                                 </constraints>
                             </datePicker>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4LB-91-pFW">
+                                <rect key="frame" x="10" y="519" width="361" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリー" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6S-hr-HHM">
+                                <rect key="frame" x="10" y="462" width="87" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gUj-46-dcj"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -115,19 +122,24 @@
                             <constraint firstItem="jeC-cL-Kln" firstAttribute="top" secondItem="nf7-IT-CqC" secondAttribute="bottom" constant="10" id="Nks-l6-77v"/>
                             <constraint firstItem="jeC-cL-Kln" firstAttribute="trailing" secondItem="gUj-46-dcj" secondAttribute="trailing" id="QIi-r1-NM4"/>
                             <constraint firstItem="rdy-0y-crh" firstAttribute="leading" secondItem="gUj-46-dcj" secondAttribute="leading" constant="10" id="Qjm-wq-zgI"/>
+                            <constraint firstItem="Z6S-hr-HHM" firstAttribute="leading" secondItem="nf7-IT-CqC" secondAttribute="leading" id="W7F-ku-nhG"/>
                             <constraint firstItem="jeC-cL-Kln" firstAttribute="leading" secondItem="gUj-46-dcj" secondAttribute="leading" id="Z3F-gl-Vrs"/>
                             <constraint firstItem="5EA-IL-LbY" firstAttribute="leading" secondItem="gUj-46-dcj" secondAttribute="leading" constant="10" id="Zft-hE-E9i"/>
+                            <constraint firstItem="Z6S-hr-HHM" firstAttribute="top" secondItem="jeC-cL-Kln" secondAttribute="bottom" constant="8" id="aYy-bb-bTb"/>
                             <constraint firstItem="n5X-wO-xFA" firstAttribute="leading" secondItem="gUj-46-dcj" secondAttribute="leading" constant="10" id="b3p-K2-e3b"/>
                             <constraint firstItem="nf7-IT-CqC" firstAttribute="top" secondItem="5EA-IL-LbY" secondAttribute="bottom" constant="10" id="gHX-hO-rSx"/>
                             <constraint firstItem="rdy-0y-crh" firstAttribute="top" secondItem="gUj-46-dcj" secondAttribute="top" constant="10" id="kKj-bc-9pK"/>
+                            <constraint firstItem="Z6S-hr-HHM" firstAttribute="leading" secondItem="4LB-91-pFW" secondAttribute="leading" id="l1s-YC-9my"/>
                             <constraint firstItem="gUj-46-dcj" firstAttribute="trailing" secondItem="nf7-IT-CqC" secondAttribute="trailing" constant="10" id="mgD-0l-Isg"/>
                             <constraint firstItem="gUj-46-dcj" firstAttribute="trailing" secondItem="5EA-IL-LbY" secondAttribute="trailing" constant="10" id="nvZ-Z1-wxg"/>
                             <constraint firstItem="n5X-wO-xFA" firstAttribute="top" secondItem="rdy-0y-crh" secondAttribute="bottom" constant="10" id="p7A-gP-jCY"/>
+                            <constraint firstItem="4LB-91-pFW" firstAttribute="top" secondItem="Z6S-hr-HHM" secondAttribute="bottom" constant="36" id="rYu-hu-76e"/>
                             <constraint firstItem="nf7-IT-CqC" firstAttribute="leading" secondItem="gUj-46-dcj" secondAttribute="leading" constant="10" id="sO3-W5-zel"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wM6-tr-aBc"/>
                     <connections>
+                        <outlet property="categoryTextField" destination="4LB-91-pFW" id="bgx-db-vvA"/>
                         <outlet property="contensTextView" destination="nf7-IT-CqC" id="sHD-M3-FIC"/>
                         <outlet property="datePicker" destination="jeC-cL-Kln" id="ioc-Hz-eDY"/>
                         <outlet property="titleTextField" destination="n5X-wO-xFA" id="aOE-AB-bh2"/>
@@ -135,12 +147,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gL0-VE-rBc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1717" y="33"/>
+            <point key="canvasLocation" x="1715.9420289855075" y="32.8125"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Image Picker Controller-->
         <scene sceneID="wLZ-8W-eor">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RUs-qi-1jn" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RUs-qi-1jn" customClass="UIImagePickerController" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="kPL-FC-3Q2">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
